# my-gadk-project

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  agent.py  config.py  instructions.py  tools.py
src/agents/: __init__.py
src/agents/capital_agent/: agent.py  config.py  pydantic.py
src/agents/code_writer_agent/: agent.py
src/agents/loop_seq_writer_critic_agent/: constants.py  instruction.py
src/agents/ny_weather_time_planner_agent/: agent.py  config.py  constants.py  tools.py
src/agents/parallel_researcher/: agent.py  instruction.py
src/agents/planner_ny_weather_time_planner_agent/: agent.py
src/agents/seq_code_writer_agent/: instruction.py
src/agents/simple_capital_agent/: agent.py  tools.py
src/agents/writer_critic_agent/: agent.py  tools.py
